// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OverlayComponent > should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: var(--ictinus-border-width-1) solid var(--ictinus-color-border-color-decorative-default);
  border-radius: var(--ictinus-border-radius-2);
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: var(--ictinus-color-background-default);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  z-index: 10;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--ictinus-spacing-5);
  padding: var(--ictinus-spacing-7);
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-6 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-7 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-8 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: var(--ictinus-spacing-4);
  color: var(--ictinus-color-text-default-active);
  width: var(--ictinus-sizing-9);
  height: var(--ictinus-sizing-9);
  background-color: var(--ictinus-color-palette-tertiary-base);
  padding: 0;
  border-radius: var(--ictinus-border-radius-7);
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-8:focus-visible:not(:disabled) {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-8:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-8:hover:not(:disabled) {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-8:active:not(:disabled),
.emotion-8[aria-expanded="true"] {
  background-color: var(--ictinus-color-palette-tertiary-contrast);
}

.emotion-9 {
  width: var(--ictinus-sizing-5);
  height: var(--ictinus-sizing-5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  width: var(--ictinus-sizing-5);
  height: var(--ictinus-sizing-5);
}

.emotion-10 path,
.emotion-10 rect {
  fill: var(--ictinus-color-text-default-active)!important;
}

.emotion-11 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-12 {
  margin: 0 var(--ictinus-spacing-4);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  font-weight: var(--ictinus-weight-medium);
}

.emotion-14 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: var(--ictinus-spacing-4);
  color: var(--ictinus-color-text-default-active);
  height: var(--ictinus-sizing-9);
  background-color: var(--ictinus-color-palette-tertiary-base);
  padding: var(--ictinus-spacing-0) var(--ictinus-spacing-6) var(--ictinus-spacing-0) var(--ictinus-spacing-6);
  border-radius: var(--ictinus-border-radius-2);
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-14:focus-visible:not(:disabled) {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-14:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-14:hover:not(:disabled) {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-14:active:not(:disabled),
.emotion-14[aria-expanded="true"] {
  background-color: var(--ictinus-color-palette-tertiary-contrast);
}

.emotion-15 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--ictinus-color-text-default-secondary);
  width: var(--ictinus-sizing-9);
  height: var(--ictinus-sizing-9);
  font-size: var(--ictinus-font-size-3);
  line-height: var(--ictinus-line-height-4);
  text-align: center;
  font-weight: var(--ictinus-weight-medium);
}

.emotion-28 {
  border-collapse: separate;
  border-spacing: 0 var(--ictinus-spacing-5);
}

.emotion-29 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: var(--ictinus-color-palette-tertiary-base);
}

.emotion-35 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: var(--ictinus-color-text-default-primary);
  width: var(--ictinus-sizing-9);
  opacity: 1;
}

.emotion-35:focus-visible {
  background-color: var(--ictinus-color-palette-tertiary-muted);
  border-radius: var(--ictinus-border-radius-7);
}

.emotion-36 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: var(--ictinus-border-width-1) solid var(--ictinus-color-border-color-decorative-transparent);
  width: var(--ictinus-sizing-9);
  height: var(--ictinus-sizing-9);
  color: var(--ictinus-color-text-default-primary);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-36:hover {
  border-radius: var(--ictinus-border-radius-7);
  background: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-39 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: var(--ictinus-color-text-default-primary);
  width: var(--ictinus-sizing-9);
  font-weight: bold;
  opacity: 1;
}

.emotion-39:focus-visible {
  background-color: var(--ictinus-color-palette-tertiary-muted);
  border-radius: var(--ictinus-border-radius-7);
}

.emotion-40 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: var(--ictinus-border-width-1) solid var(--ictinus-color-border-color-interactive-active);
  border-radius: var(--ictinus-border-radius-7);
  width: var(--ictinus-sizing-9);
  height: var(--ictinus-sizing-9);
  color: var(--ictinus-color-text-default-primary);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-40:hover {
  border-radius: var(--ictinus-border-radius-7);
  background: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-41 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: var(--ictinus-color-text-inverted-primary);
  width: var(--ictinus-sizing-9);
  opacity: 1;
  background: var(--ictinus-color-palette-primary-contrast);
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-41:focus-visible {
  background-color: var(--ictinus-color-palette-tertiary-muted);
  border-radius: var(--ictinus-border-radius-7);
}

.emotion-41:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-42 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0 solid var(--ictinus-color-border-color-decorative-transparent);
  border-radius: var(--ictinus-border-radius-7);
  width: var(--ictinus-sizing-9);
  height: var(--ictinus-sizing-9);
  color: var(--ictinus-color-text-inverted-primary);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: var(--ictinus-color-palette-primary-contrast);
}

.emotion-42:hover {
  border-radius: var(--ictinus-border-radius-7);
  background: false;
}

.emotion-43 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: var(--ictinus-color-text-default-primary);
  width: var(--ictinus-sizing-9);
  opacity: 1;
  background: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-43:focus-visible {
  background-color: var(--ictinus-color-palette-tertiary-muted);
  border-radius: var(--ictinus-border-radius-7);
}

.emotion-44 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: var(--ictinus-border-width-1) solid var(--ictinus-color-border-color-decorative-transparent);
  width: var(--ictinus-sizing-9);
  height: var(--ictinus-sizing-9);
  color: var(--ictinus-color-text-default-primary);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-44:hover {
  border-radius: var(--ictinus-border-radius-7);
  background: transparent;
}

.emotion-101 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  height: var(--ictinus-sizing-15);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--ictinus-spacing-4);
  padding: 0 var(--ictinus-spacing-7);
  border-top: var(--ictinus-border-width-1) solid var(--ictinus-color-border-color-decorative-default);
}

.emotion-105 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: var(--ictinus-spacing-4);
  color: var(--ictinus-color-text-inverted-primary);
  height: var(--ictinus-sizing-9);
  background-color: var(--ictinus-color-palette-primary-base);
  padding: var(--ictinus-spacing-0) var(--ictinus-spacing-6) var(--ictinus-spacing-0) var(--ictinus-spacing-6);
  border-radius: var(--ictinus-border-radius-2);
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-105:focus-visible:not(:disabled) {
  background-color: var(--ictinus-color-palette-primary-muted);
}

.emotion-105:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-105:hover:not(:disabled) {
  background-color: var(--ictinus-color-palette-primary-muted);
}

.emotion-105:active:not(:disabled),
.emotion-105[aria-expanded="true"] {
  background-color: var(--ictinus-color-palette-primary-contrast);
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="buttonMonthsWrapperStyle"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <button
                    class="emotion-8"
                    data-slot="button"
                    data-testid="icon-button-month_back"
                    type="button"
                  >
                    <div
                      class="emotion-9"
                      data-slot="icon"
                    >
                      <svg
                        class="emotion-10"
                        fill="none"
                        viewBox="0 0 20 20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M10.3598 13.6332C11.0111 14.176 12 13.7128 12 12.865V7.13504C12 6.2872 11.0111 5.82405 10.3598 6.36682L6.92186 9.23178C6.44211 9.63157 6.44211 10.3684 6.92187 10.7682L10.3598 13.6332Z"
                          fill="#6265AD"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
              <div>
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-12"
                    data-testid="month_header"
                  >
                    <div
                      class="emotion-7"
                    >
                      <button
                        class="emotion-14"
                        data-slot="button"
                        data-testid="button-month"
                        type="button"
                      >
                        <span>
                          November
                           
                          2020
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-15"
                >
                  <div
                    class="emotion-7"
                  >
                    <button
                      class="emotion-8"
                      data-slot="button"
                      data-testid="icon-button-month_forward"
                      type="button"
                    >
                      <div
                        class="emotion-9"
                        data-slot="icon"
                      >
                        <svg
                          class="emotion-10"
                          fill="none"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.64018 13.6332C8.98886 14.176 8 13.7128 8 12.865V7.13504C8 6.2872 8.98886 5.82405 9.64018 6.36682L13.0781 9.23178C13.5579 9.63157 13.5579 10.3684 13.0781 10.7682L9.64018 13.6332Z"
                            fill="#6265AD"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-20"
            >
              <div
                class="emotion-21"
              >
                Mo
              </div>
              <div
                class="emotion-21"
              >
                Tu
              </div>
              <div
                class="emotion-21"
              >
                We
              </div>
              <div
                class="emotion-21"
              >
                Th
              </div>
              <div
                class="emotion-21"
              >
                Fr
              </div>
              <div
                class="emotion-21"
              >
                Sa
              </div>
              <div
                class="emotion-21"
              >
                Su
              </div>
            </div>
            <table
              class="emotion-28"
              data-testid="calendar_table"
              tabindex="0"
            >
              <tbody>
                <tr>
                  <td
                    class="emotion-29"
                  />
                  <td
                    class="emotion-29"
                  />
                  <td
                    class="emotion-29"
                  />
                  <td
                    class="emotion-29"
                  />
                  <td
                    class="emotion-29"
                  />
                  <td
                    class="emotion-29"
                  />
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                      data-testid="1_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-36"
                      >
                        1
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                      data-testid="2_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-36"
                      >
                        2
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-39"
                      data-testid="3_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-40"
                      >
                        3
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-41"
                      data-testid="4_11_2020_selected"
                      tabindex="0"
                    >
                      <div
                        class="emotion-42"
                      >
                        4
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="5_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        5
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="6_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        6
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="7_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        7
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="8_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        8
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="9_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        9
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="10_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        10
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="11_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        11
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="12_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        12
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="13_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        13
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="14_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        14
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="15_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        15
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="16_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        16
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="17_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        17
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="18_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        18
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="19_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        19
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="20_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        20
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="21_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        21
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="22_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        22
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="23_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        23
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="24_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        24
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="25_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        25
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="26_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        26
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="27_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        27
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="28_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        28
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="29_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        29
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-43"
                      data-testid="30_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-44"
                      >
                        30
                      </div>
                    </div>
                  </td>
                  <td
                    class="emotion-29"
                  />
                  <td
                    class="emotion-29"
                  />
                  <td
                    class="emotion-29"
                  />
                  <td
                    class="emotion-29"
                  />
                  <td
                    class="emotion-29"
                  />
                  <td
                    class="emotion-29"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        class="emotion-101"
      >
        <div
          class="emotion-7"
        >
          <button
            class="emotion-14"
            data-slot="button"
            data-testid="button-cancel"
            type="button"
          >
            <span>
              Clear All
            </span>
          </button>
        </div>
        <div
          class="emotion-7"
        >
          <button
            class="emotion-105"
            data-slot="button"
            data-testid="button-apply"
            type="button"
          >
            <span>
              Apply
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverlayComponent > should render datepicker correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: var(--ictinus-border-width-1) solid var(--ictinus-color-border-color-decorative-default);
  border-radius: var(--ictinus-border-radius-2);
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: var(--ictinus-color-background-default);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  border-right: var(--ictinus-border-width-1) solid var(--ictinus-color-border-color-decorative-default);
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  white-space: nowrap;
  padding: var(--ictinus-spacing-6);
  font-weight: var(--ictinus-weight-regular);
  cursor: pointer;
  background-color: transparent;
  position: relative;
}

.emotion-4:hover {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  z-index: 10;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--ictinus-spacing-5);
  padding: var(--ictinus-spacing-7);
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-10 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-11 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-12 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: var(--ictinus-spacing-4);
  color: var(--ictinus-color-text-default-active);
  width: var(--ictinus-sizing-9);
  height: var(--ictinus-sizing-9);
  background-color: var(--ictinus-color-palette-tertiary-base);
  padding: 0;
  border-radius: var(--ictinus-border-radius-7);
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-12:focus-visible:not(:disabled) {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-12:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-12:hover:not(:disabled) {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-12:active:not(:disabled),
.emotion-12[aria-expanded="true"] {
  background-color: var(--ictinus-color-palette-tertiary-contrast);
}

.emotion-13 {
  width: var(--ictinus-sizing-5);
  height: var(--ictinus-sizing-5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-14 {
  width: var(--ictinus-sizing-5);
  height: var(--ictinus-sizing-5);
}

.emotion-14 path,
.emotion-14 rect {
  fill: var(--ictinus-color-text-default-active)!important;
}

.emotion-15 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-16 {
  margin: 0 var(--ictinus-spacing-4);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: var(--ictinus-weight-medium);
}

.emotion-18 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: var(--ictinus-spacing-4);
  color: var(--ictinus-color-text-default-active);
  height: var(--ictinus-sizing-9);
  background-color: var(--ictinus-color-palette-tertiary-base);
  padding: var(--ictinus-spacing-0) var(--ictinus-spacing-6) var(--ictinus-spacing-0) var(--ictinus-spacing-6);
  border-radius: var(--ictinus-border-radius-2);
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-18:focus-visible:not(:disabled) {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-18:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-18:hover:not(:disabled) {
  background-color: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-18:active:not(:disabled),
.emotion-18[aria-expanded="true"] {
  background-color: var(--ictinus-color-palette-tertiary-contrast);
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--ictinus-color-text-default-secondary);
  width: var(--ictinus-sizing-9);
  height: var(--ictinus-sizing-9);
  font-size: var(--ictinus-font-size-3);
  line-height: var(--ictinus-line-height-4);
  text-align: center;
  font-weight: var(--ictinus-weight-medium);
}

.emotion-27 {
  border-collapse: separate;
  border-spacing: 0 var(--ictinus-spacing-5);
}

.emotion-28 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: var(--ictinus-color-palette-tertiary-base);
}

.emotion-34 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: var(--ictinus-color-text-default-primary);
  width: var(--ictinus-sizing-9);
  opacity: 1;
}

.emotion-34:focus-visible {
  background-color: var(--ictinus-color-palette-tertiary-muted);
  border-radius: var(--ictinus-border-radius-7);
}

.emotion-35 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: var(--ictinus-border-width-1) solid var(--ictinus-color-border-color-decorative-transparent);
  width: var(--ictinus-sizing-9);
  height: var(--ictinus-sizing-9);
  color: var(--ictinus-color-text-default-primary);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-35:hover {
  border-radius: var(--ictinus-border-radius-7);
  background: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-38 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: var(--ictinus-color-text-default-primary);
  width: var(--ictinus-sizing-9);
  font-weight: bold;
  opacity: 1;
}

.emotion-38:focus-visible {
  background-color: var(--ictinus-color-palette-tertiary-muted);
  border-radius: var(--ictinus-border-radius-7);
}

.emotion-39 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: var(--ictinus-border-width-1) solid var(--ictinus-color-border-color-interactive-active);
  border-radius: var(--ictinus-border-radius-7);
  width: var(--ictinus-sizing-9);
  height: var(--ictinus-sizing-9);
  color: var(--ictinus-color-text-default-primary);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-39:hover {
  border-radius: var(--ictinus-border-radius-7);
  background: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-40 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: var(--ictinus-color-text-inverted-primary);
  width: var(--ictinus-sizing-9);
  opacity: 1;
  background: var(--ictinus-color-palette-primary-contrast);
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-40:focus-visible {
  background-color: var(--ictinus-color-palette-tertiary-muted);
  border-radius: var(--ictinus-border-radius-7);
}

.emotion-40:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-41 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0 solid var(--ictinus-color-border-color-decorative-transparent);
  border-radius: var(--ictinus-border-radius-7);
  width: var(--ictinus-sizing-9);
  height: var(--ictinus-sizing-9);
  color: var(--ictinus-color-text-inverted-primary);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: var(--ictinus-color-palette-primary-contrast);
}

.emotion-41:hover {
  border-radius: var(--ictinus-border-radius-7);
  background: false;
}

.emotion-42 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: var(--ictinus-color-text-default-primary);
  width: var(--ictinus-sizing-9);
  opacity: 1;
  background: var(--ictinus-color-palette-tertiary-muted);
}

.emotion-42:focus-visible {
  background-color: var(--ictinus-color-palette-tertiary-muted);
  border-radius: var(--ictinus-border-radius-7);
}

.emotion-43 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: var(--ictinus-border-width-1) solid var(--ictinus-color-border-color-decorative-transparent);
  width: var(--ictinus-sizing-9);
  height: var(--ictinus-sizing-9);
  color: var(--ictinus-color-text-default-primary);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-43:hover {
  border-radius: var(--ictinus-border-radius-7);
  background: transparent;
}

.emotion-106 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-153 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: var(--ictinus-color-text-inverted-primary);
  width: var(--ictinus-sizing-9);
  opacity: 1;
  background: var(--ictinus-color-palette-primary-contrast);
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
}

.emotion-153:focus-visible {
  background-color: var(--ictinus-color-palette-tertiary-muted);
  border-radius: var(--ictinus-border-radius-7);
}

.emotion-153:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  left: 0;
  right: initial;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-186 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  height: var(--ictinus-sizing-15);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--ictinus-spacing-4);
  padding: 0 var(--ictinus-spacing-7);
  border-top: var(--ictinus-border-width-1) solid var(--ictinus-color-border-color-decorative-default);
}

.emotion-190 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: var(--ictinus-spacing-4);
  color: var(--ictinus-color-text-inverted-primary);
  height: var(--ictinus-sizing-9);
  background-color: var(--ictinus-color-palette-primary-base);
  padding: var(--ictinus-spacing-0) var(--ictinus-spacing-6) var(--ictinus-spacing-0) var(--ictinus-spacing-6);
  border-radius: var(--ictinus-border-radius-2);
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-190:focus-visible:not(:disabled) {
  background-color: var(--ictinus-color-palette-primary-muted);
}

.emotion-190:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-190:hover:not(:disabled) {
  background-color: var(--ictinus-color-palette-primary-muted);
}

.emotion-190:active:not(:disabled),
.emotion-190[aria-expanded="true"] {
  background-color: var(--ictinus-color-palette-primary-contrast);
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="buttonMonthsWrapperStyle"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="optionsWrapperStyle"
        >
          <div
            class="emotion-4"
          >
            Last 7 days
          </div>
          <div
            class="emotion-4"
          >
            Last 30 days
          </div>
          <div
            class="emotion-4"
          >
            Custom
          </div>
        </div>
        <div
          class="emotion-7"
        >
          <div
            class="emotion-8"
          >
            <div
              class="emotion-9"
            >
              <div
                class="emotion-10"
              >
                <div
                  class="emotion-11"
                >
                  <button
                    class="emotion-12"
                    data-slot="button"
                    data-testid="icon-button-month_back"
                    type="button"
                  >
                    <div
                      class="emotion-13"
                      data-slot="icon"
                    >
                      <svg
                        class="emotion-14"
                        fill="none"
                        viewBox="0 0 20 20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M10.3598 13.6332C11.0111 14.176 12 13.7128 12 12.865V7.13504C12 6.2872 11.0111 5.82405 10.3598 6.36682L6.92186 9.23178C6.44211 9.63157 6.44211 10.3684 6.92187 10.7682L10.3598 13.6332Z"
                          fill="#6265AD"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
              <div>
                <div
                  class="emotion-15"
                >
                  <div
                    class="emotion-16"
                    data-testid="month_header"
                  >
                    <div
                      class="emotion-11"
                    >
                      <button
                        class="emotion-18"
                        data-slot="button"
                        data-testid="button-left_month"
                        type="button"
                      >
                        <span>
                          November
                           
                          2020
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-19"
            >
              <div
                class="emotion-20"
              >
                Mo
              </div>
              <div
                class="emotion-20"
              >
                Tu
              </div>
              <div
                class="emotion-20"
              >
                We
              </div>
              <div
                class="emotion-20"
              >
                Th
              </div>
              <div
                class="emotion-20"
              >
                Fr
              </div>
              <div
                class="emotion-20"
              >
                Sa
              </div>
              <div
                class="emotion-20"
              >
                Su
              </div>
            </div>
            <table
              class="emotion-27"
              data-testid="calendar_table"
              tabindex="0"
            >
              <tbody>
                <tr>
                  <td
                    class="emotion-28"
                  />
                  <td
                    class="emotion-28"
                  />
                  <td
                    class="emotion-28"
                  />
                  <td
                    class="emotion-28"
                  />
                  <td
                    class="emotion-28"
                  />
                  <td
                    class="emotion-28"
                  />
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="1_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        1
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="2_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        2
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-38"
                      data-testid="3_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-39"
                      >
                        3
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-40"
                      data-testid="4_11_2020_selected"
                      tabindex="0"
                    >
                      <div
                        class="emotion-41"
                      >
                        4
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="5_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        5
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="6_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        6
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="7_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        7
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="8_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        8
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="9_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        9
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="10_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        10
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="11_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        11
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="12_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        12
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="13_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        13
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="14_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        14
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="15_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        15
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="16_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        16
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="17_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        17
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="18_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        18
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="19_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        19
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="20_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        20
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="21_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        21
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="22_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        22
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="23_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        23
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="24_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        24
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="25_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        25
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="26_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        26
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="27_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        27
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="28_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        28
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="29_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        29
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="30_11_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        30
                      </div>
                    </div>
                  </td>
                  <td
                    class="emotion-28"
                  />
                  <td
                    class="emotion-28"
                  />
                  <td
                    class="emotion-28"
                  />
                  <td
                    class="emotion-28"
                  />
                  <td
                    class="emotion-28"
                  />
                  <td
                    class="emotion-28"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div
            class="emotion-8"
          >
            <div
              class="emotion-9"
            >
              <div>
                <div
                  class="emotion-15"
                >
                  <div
                    class="emotion-16"
                    data-testid="month_header"
                  >
                    <div
                      class="emotion-11"
                    >
                      <button
                        class="emotion-18"
                        data-slot="button"
                        data-testid="button-right_month"
                        type="button"
                      >
                        <span>
                          December
                           
                          2020
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-106"
                >
                  <div
                    class="emotion-11"
                  >
                    <button
                      class="emotion-12"
                      data-slot="button"
                      data-testid="icon-button-month_forward"
                      type="button"
                    >
                      <div
                        class="emotion-13"
                        data-slot="icon"
                      >
                        <svg
                          class="emotion-14"
                          fill="none"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.64018 13.6332C8.98886 14.176 8 13.7128 8 12.865V7.13504C8 6.2872 8.98886 5.82405 9.64018 6.36682L13.0781 9.23178C13.5579 9.63157 13.5579 10.3684 13.0781 10.7682L9.64018 13.6332Z"
                            fill="#6265AD"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-19"
            >
              <div
                class="emotion-20"
              >
                Mo
              </div>
              <div
                class="emotion-20"
              >
                Tu
              </div>
              <div
                class="emotion-20"
              >
                We
              </div>
              <div
                class="emotion-20"
              >
                Th
              </div>
              <div
                class="emotion-20"
              >
                Fr
              </div>
              <div
                class="emotion-20"
              >
                Sa
              </div>
              <div
                class="emotion-20"
              >
                Su
              </div>
            </div>
            <table
              class="emotion-27"
              data-testid="calendar_table"
              tabindex="0"
            >
              <tbody>
                <tr>
                  <td
                    class="emotion-28"
                  />
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="1_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        1
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="2_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        2
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="3_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        3
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="4_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        4
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="5_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        5
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="6_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        6
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="7_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        7
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="8_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        8
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="9_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        9
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="10_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        10
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="11_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        11
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="12_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        12
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="13_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        13
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="14_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        14
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="15_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        15
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-42"
                      data-testid="16_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-43"
                      >
                        16
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-153"
                      data-testid="17_12_2020_selected"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-41"
                      >
                        17
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="18_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        18
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="19_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        19
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="20_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        20
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="21_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        21
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="22_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        22
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="23_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        23
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="24_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        24
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="25_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        25
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="26_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        26
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="27_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        27
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="28_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        28
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="29_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        29
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="30_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        30
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                      data-testid="31_12_2020"
                      tabindex="-1"
                    >
                      <div
                        class="emotion-35"
                      >
                        31
                      </div>
                    </div>
                  </td>
                  <td
                    class="emotion-28"
                  />
                  <td
                    class="emotion-28"
                  />
                  <td
                    class="emotion-28"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        class="emotion-186"
      >
        <div
          class="emotion-11"
        >
          <button
            class="emotion-18"
            data-slot="button"
            data-testid="button-cancel"
            type="button"
          >
            <span>
              Clear All
            </span>
          </button>
        </div>
        <div
          class="emotion-11"
        >
          <button
            class="emotion-190"
            data-slot="button"
            data-testid="button-apply"
            type="button"
          >
            <span>
              Apply
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
